--- a/BongmadeStyle.css
+++ b/BongmadeStyle.css
@@ -69,13 +69,13 @@ a {
     overflow: hidden;
 }
 
-/*.box {
+.box {
     transition: all 1s;
 }
 
 .box:hover {
     transform: scale(1.1);
-}*/
+}
 
 
 .featured {
